--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^5.x",
+    "@wxik/core": "^0.5.3",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -34,6 +35,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-markdown-display": "^6.1.6",
     "react-native-markdown-renderer": "^3.2.8",
+    "react-native-modal": "^13.0.0",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
