--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-syntax-highlighter": "^2.1.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "^11.17.0",
